# zzj_school_py_code

./: README.md  project_structure.md  pyproject.toml
docs/: 实验2  基本数据类型.doc
src/: exp_1.py  exp_2.py
src/school_code/exp_1/: __main__.py  run.py
