[project]
name = "school-code"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fromsko", email = "1614355756@qq.com" }
]
dependencies = [
    "black>=25.1.0",
    "pydantic>=2.11.3",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye.scripts]
format = "black ."
1 = "python src/exp_1.py"
2 = "python src/exp_2.py"

[[tool.rye.sources]]
name = "default"
url = "https://mirrors.aliyun.com/pypi/simple/"
